[package]
name = "bfcc"
version = "0.1.0"
edition = "2021"
description = "A brainfuck toolchain"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
pest = "2.0"
pest_derive = "2.0"
pest_ascii_tree = "0.1.0"
zmq = { version= "0.9", features = ["vendored"] }

[dev-dependencies]
pretty_assertions = "1.0.0"