[package]
name = "bfcc"
version = "0.1.1"
edition = "2021"
description = "A brainfuck toolchain"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
pest = "2.0"
pest_derive = "2.0"
pest_ascii_tree = "0.1.0"
rustc-hash = "1.1.0"
serde = { version = "1.0.133", features = ["derive"] }
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zmq = { version= "0.9", features = ["vendored"] }


[dev-dependencies]
pretty_assertions = "1.0.0"

[[bin]]
name = "bfcc"
path = "src/main.rs"


[lib]
crate-type = ["cdylib", "rlib"]
